Improve Docker Image build process